cabal-version:      2.4
name:               Plutus-project
version:            0.1.0.0
synopsis:           Crowdfunding/charity event plutus dapp
homepage:
license:            MIT
license-file:       LICENSE
author:             bryanfeliciano
maintainer:         bryanfeliciano892@gmail.com
extra-source-files: CHANGELOG.md
library
    exposed-modules:  MainContract
    
    build-depends:    base ^>=4.14.1.0
                    , aeson
                    , containers
                    , data-default
                    , freer-extras
                    , playground-common
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-ledger-constraints
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
    
    hs-source-dirs:   src

    default-language: Haskell2010

test-suite Plutus-project-test

    default-language: Haskell2010

    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          MyLibTest.hs

    build-depends:    base ^>=4.14.1.0
